--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.aux
-.bbl
-.bcf
-.fdb_latexmk
-.fls
-.log
-.run.xml
-.syntex.gz
-.toc
+*.aux
+*.bbl
+*.bcf
+*.fdb_latexmk
+*.fls
+*.log
+*.run.xml
+*.syntex.gz
+*.toc
